@@ -18,3 +18,32 @@ Users can like reviews created by other users.
 - Nicholas Yang <ml2643yh@go.minnestate.edu> Username: Nicholas2501
 - Caleb Centy <calebcenty18@gmail.com> Username: caLeb-centy
 - Chang Vang <changvang32@gmail.com> Username: Project-Escape
+
+
+## How To Run Program - Testing this
+1. Visit https://gluonhq.com/products/javafx/
+2. Select JavaFX Version "21.0.4 [LTS]"
+3. Select Operating system of choice
+4. Select Architecture of choice
+5. Select type "SDK"
+
+6. Find and extract JavaFX-SDK ZIP
+7. Take note of path to lib folder, we will be revisiting this step
+
+8. In IntelliJ, Navigate to Main.Java
+9. Edit Run Configurations
+10. Select Modify Options > Add VM Options
+11. Copy and Paste "--module-path /pathTo/lib --add-modules=javafx.controls,javafx.fxml" and replace /pathTo/lib with lib path from step 7
+
+12. Make sure Java 21 SDK is selected
+
+--------
+New way to run
+
+1. Create Gradle Run Configuration
+2. Put in ":run for the command
+3. Make sure Application is selected
+
+
+
+
